--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: easy_debounce
 description: An extremely easy-to-use method call debouncer package for Dart/Flutter.
-version: 1.0.2
+version: 2.0.0
 homepage: https://github.com/magnuswikhog/easy_debounce
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+
 
 dependencies:
   flutter:
