--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,10 @@
 name: easy_debounce
 description: An extremely easy-to-use method call debouncer package for Dart/Flutter.
-version: 2.0.1
+version: 2.1.0
 homepage: https://github.com/magnuswikhog/easy_debounce
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-
-
-dependencies:
-  flutter:
-    sdk: flutter
+  sdk: ">=2.12.0 <3.0.0"
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-flutter:
+  test: ^1.20.1
