--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ build/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Packages should not commit the "pubspec.lock" file. See
+# https://stackoverflow.com/a/16136740/8358501
+pubspec.lock
