--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,7 @@ version: 2.0.1
 homepage: https://github.com/magnuswikhog/easy_debounce
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-
-
-dependencies:
-  flutter:
-    sdk: flutter
+  sdk: ">=2.12.0 <3.0.0"
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-flutter:
+  test: ^1.20.1
